display forms, get names, some json

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,10 @@
   margin: 10px 5px;
 }
 
-#cohortNames {
-  width: 50%;
+#form {
+  width: 270px;
+  background-color: #F5F5F5;
+  padding: 5px;
 }
 
 .center {
